--- a/03_Linear Regression NN.ipynb
+++ b/03_Linear Regression NN.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "124b5cf4",
+   "id": "5548b1e3",
    "metadata": {},
    "source": [
     "## Vector acceleration"
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "0a9d84b8",
+   "id": "278f4214",
    "metadata": {},
    "source": [
     "We can find Vector acceleration is faster than the def we wrote."
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7378206",
+   "id": "afcebb5c",
    "metadata": {},
    "source": [
     "## normal distribution"
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "d6d42a7b",
+   "id": "948dc42b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "b9e3b19a",
+   "id": "7fa0dd74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "907bec14",
+   "id": "bd0b7c4b",
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8b9a484",
+   "id": "24b9f6d1",
    "metadata": {},
    "source": [
     "##  LRNN Start"
@@ -1353,7 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "ee495df9",
+   "id": "b4ab7c6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "a6793704",
+   "id": "a73d61e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1381,7 +1381,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "f7129c3f",
+   "id": "fe0042d4",
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1400,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "f57147f9",
+   "id": "fba69b71",
    "metadata": {},
    "outputs": [
     {
@@ -2727,15 +2727,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "d9af35f3",
+   "execution_count": 45,
+   "id": "e8e69cf7",
    "metadata": {},
    "outputs": [],
    "source": [
     "def data_iter(batch_size, features, labels):\n",
     "    num_examples = len(features)\n",
     "    indices = list(range(num_examples))\n",
-    "    # 这些样本是随机读取的，没有特定的顺序\n",
+    "    # Some Sample are random\n",
     "    random.shuffle(indices)\n",
     "    for i in range(0, num_examples, batch_size):\n",
     "        batch_indices = torch.tensor(\n",
@@ -2745,8 +2745,206 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "id": "0be11c62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-1.2570,  0.3058],\n",
+      "        [-0.8497,  0.6436],\n",
+      "        [-0.7381, -1.2801],\n",
+      "        [ 1.4672,  0.1840],\n",
+      "        [-2.8994,  0.3120],\n",
+      "        [-0.8703,  0.1327],\n",
+      "        [ 0.1481, -1.3841],\n",
+      "        [ 0.5214,  0.4361],\n",
+      "        [-0.7131,  1.4418],\n",
+      "        [-0.1436, -1.2345]]) \n",
+      " tensor([[ 0.6433],\n",
+      "        [ 0.3106],\n",
+      "        [ 7.0839],\n",
+      "        [ 6.4895],\n",
+      "        [-2.6546],\n",
+      "        [ 2.0146],\n",
+      "        [ 9.1955],\n",
+      "        [ 3.7502],\n",
+      "        [-2.1269],\n",
+      "        [ 8.1074]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size = 10\n",
+    "for X, y in data_iter(batch_size, features, labels):\n",
+    "    print(X, '\\n', y)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c3128c5",
+   "metadata": {},
+   "source": [
+    "### Initlize Model "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "20bf6116",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[ 0.0045],\n",
+       "         [-0.0056]], requires_grad=True),\n",
+       " tensor([0.], requires_grad=True))"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# mean = 0 , std = 0.01\n",
+    "w = torch.normal(0, 0.01, size=(2,1), requires_grad=True)\n",
+    "b = torch.zeros(1, requires_grad=True)\n",
+    "w, b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d9162b3",
+   "metadata": {},
+   "source": [
+    "### def Model "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "104730a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linreg(X, w, b): #@save\n",
+    "    \"\"\"LR\"\"\"\n",
+    "    return torch.matmul(X, w) + b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42dd7345",
+   "metadata": {},
+   "source": [
+    "### def squard_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "54c32492",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def squared_loss(y_hat, y): #@save\n",
+    "    \"\"\"均方损失\"\"\"\n",
+    "    return (y_hat - y.reshape(y_hat.shape)) ** 2 / 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fd1af78",
+   "metadata": {},
+   "source": [
+    "### def and improve aglorism "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "63ac9c1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sgd(params, lr, batch_size): #@save\n",
+    "    \"\"\"small batch_size grident deduction\"\"\"\n",
+    "    with torch.no_grad():\n",
+    "        for param in params:\n",
+    "            param -= lr * param.grad / batch_size\n",
+    "            param.grad.zero_()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "668ff680",
+   "metadata": {},
+   "source": [
+    "### Train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "67cb906c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 1, loss 0.041778\n",
+      "epoch 2, loss 0.000166\n",
+      "epoch 3, loss 0.000049\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr = 0.03\n",
+    "num_epochs = 3\n",
+    "net = linreg\n",
+    "loss = squared_loss\n",
+    "for epoch in range(num_epochs):\n",
+    "    for X, y in data_iter(batch_size, features, labels):\n",
+    "        l = loss(net(X, w, b), y) # X和y的小批量损失\n",
+    "        # 因为l形状是(batch_size,1)，而不是一个标量。l中的所有元素被加到一起，\n",
+    "        # 并以此计算关于[w,b]的梯度\n",
+    "        l.sum().backward()\n",
+    "        sgd([w, b], lr, batch_size) # 使用参数的梯度更新参数\n",
+    "    with torch.no_grad():\n",
+    "        train_l = loss(net(features, w, b), labels)\n",
+    "        print(f'epoch {epoch + 1}, loss {float(train_l.mean()):f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "586331ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w的估计误差: tensor([ 0.0009, -0.0010], grad_fn=<SubBackward0>)\n",
+      "b的估计误差: tensor([0.0007], grad_fn=<RsubBackward1>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'w的估计误差: {true_w - w.reshape(true_w.shape)}')\n",
+    "print(f'b的估计误差: {true_b - b}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8d20428b",
+   "id": "baa43fb4",
    "metadata": {},
    "outputs": [],
    "source": []
