--- a/05_Builders’ Guide.ipynb
+++ b/05_Builders’ Guide.ipynb
@@ -2,8 +2,308 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "e4a24628",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d3dd08bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import torch\n",
+    "from matplotlib_inline import backend_inline\n",
+    "from matplotlib import pyplot as plt\n",
+    "import torchvision\n",
+    "from torch.utils import data\n",
+    "from torchvision import transforms\n",
+    "from IPython import display\n",
+    "\n",
+    "def load_array(data_arrays, batch_size, is_train=True):  #@save\n",
+    "    \"\"\"构造一个PyTorch数据迭代器\"\"\"\n",
+    "    dataset = data.TensorDataset(*data_arrays)\n",
+    "    return data.DataLoader(dataset, batch_size, shuffle=is_train)\n",
+    "\n",
+    "def use_svg_display(): #@save\n",
+    "    \"\"\"svg\"\"\"\n",
+    "    backend_inline.set_matplotlib_formats('svg')\n",
+    "\n",
+    "## figure size\n",
+    "def set_figsize(figsize=(3.5, 2.5)): #@save\n",
+    "    \"\"\"matplotlib figuresize\"\"\"\n",
+    "    use_svg_display()\n",
+    "    plt.rcParams['figure.figsize'] = figsize\n",
+    "    \n",
+    "## get the figure axis\n",
+    "#@save\n",
+    "def set_axes(axes, xlabel, ylabel, xlim, ylim, xscale, yscale, legend):\n",
+    "    \"\"\"Set matplotlib Axis\"\"\"\n",
+    "    axes.set_xlabel(xlabel)\n",
+    "    axes.set_ylabel(ylabel)\n",
+    "    axes.set_xscale(xscale)\n",
+    "    axes.set_yscale(yscale)\n",
+    "    axes.set_xlim(xlim)\n",
+    "    axes.set_ylim(ylim)\n",
+    "    if legend:\n",
+    "        axes.legend(legend)\n",
+    "    axes.grid()\n",
+    "    \n",
+    "def synthetic_data(w, b, num_examples): #@save\n",
+    "    \"\"\"生成y=Xw+b+噪声\"\"\"\n",
+    "    X = torch.normal(0, 1, (num_examples, len(w)))\n",
+    "    y = torch.matmul(X, w) + b\n",
+    "    y += torch.normal(0, 0.01, y.shape)\n",
+    "    return X, y.reshape((-1, 1))\n",
+    "\n",
+    "def data_iter(batch_size, features, labels):\n",
+    "    num_examples = len(features)\n",
+    "    indices = list(range(num_examples))\n",
+    "    # Some Sample are random\n",
+    "    random.shuffle(indices)\n",
+    "    for i in range(0, num_examples, batch_size):\n",
+    "        batch_indices = torch.tensor(\n",
+    "        indices[i: min(i + batch_size, num_examples)])\n",
+    "        yield features[batch_indices], labels[batch_indices]\n",
+    "\n",
+    "    \n",
+    "def plot(X, Y=None, xlabel=None, ylabel=None, legend=None, xlim=None,\n",
+    "         ylim=None, xscale='linear', yscale='linear',\n",
+    "         fmts=('-', 'm--', 'g-.', 'r:'), figsize=(3.5, 2.5), axes=None):\n",
+    "    \"\"\"绘制数据点图形\"\"\"\n",
+    "    if legend is None:\n",
+    "        legend = []\n",
+    "    \n",
+    "    set_figsize(figsize)\n",
+    "    axes = axes if axes else plt.gca()\n",
+    "    \n",
+    "    if has_one_axis(X):\n",
+    "        X = [X]\n",
+    "    if Y is None:\n",
+    "        X, Y = [[]] * len(X), X\n",
+    "    elif has_one_axis(Y):\n",
+    "        Y = [Y]\n",
+    "    \n",
+    "    if len(X) != len(Y):\n",
+    "        X = X * len(Y)\n",
+    "        axes.cla()\n",
+    "    \n",
+    "    for x, y, fmt in zip(X, Y, fmts):\n",
+    "        if len(x):\n",
+    "            axes.plot(x, y, fmt)\n",
+    "        else:\n",
+    "            axes.plot(y, fmt)\n",
+    "    \n",
+    "    set_axes(axes, xlabel, ylabel, xlim, ylim, xscale, yscale, legend)\n",
+    "    \n",
+    "    return axes\n",
+    "\n",
+    "def has_one_axis(X):\n",
+    "    \"\"\"判断数据是否有一个轴\"\"\"\n",
+    "    return hasattr(X, \"ndim\") and X.ndim == 1 or isinstance(X, list) and not hasattr(X[0], \"__len__\")\n",
+    "\n",
+    "def squared_loss(y_hat, y): #@save\n",
+    "    \"\"\"均方损失\"\"\"\n",
+    "    return (y_hat - y.reshape(y_hat.shape)) ** 2 / 2\n",
+    "\n",
+    "def sgd(params, lr, batch_size): #@save\n",
+    "    \"\"\"small batch_size grident deduction\"\"\"\n",
+    "    with torch.no_grad():\n",
+    "        for param in params:\n",
+    "            param -= lr * param.grad / batch_size\n",
+    "            param.grad.zero_()\n",
+    "            \n",
+    "def linreg(X, w, b): #@save\n",
+    "    \"\"\"LR\"\"\"\n",
+    "    return torch.matmul(X, w) + b\n",
+    "            \n",
+    "            \n",
+    "def get_dataloader_workers(): #@save\n",
+    "    \"\"\"使用4个进程来读取数据\"\"\"\n",
+    "    return 4\n",
+    "\n",
+    "def load_data_fashion_mnist(batch_size, resize=None):  #@save\n",
+    "    \"\"\"下载Fashion-MNIST数据集，然后将其加载到内存中\"\"\"\n",
+    "    trans = [transforms.ToTensor()]\n",
+    "    if resize:\n",
+    "        trans.insert(0, transforms.Resize(resize))\n",
+    "    trans = transforms.Compose(trans)\n",
+    "    mnist_train = torchvision.datasets.FashionMNIST(\n",
+    "        root=\"../data\", train=True, transform=trans, download=True)\n",
+    "    mnist_test = torchvision.datasets.FashionMNIST(\n",
+    "        root=\"../data\", train=False, transform=trans, download=True)\n",
+    "    return (data.DataLoader(mnist_train, batch_size, shuffle=True,\n",
+    "                            num_workers=get_dataloader_workers()),\n",
+    "            data.DataLoader(mnist_test, batch_size, shuffle=False,\n",
+    "                            num_workers=get_dataloader_workers()))\n",
+    "\n",
+    "class Animator:  #@save\n",
+    "    \"\"\"在动画中绘制数据\"\"\"\n",
+    "    def __init__(self, xlabel=None, ylabel=None, legend=None, xlim=None,\n",
+    "                 ylim=None, xscale='linear', yscale='linear',\n",
+    "                 fmts=('-', 'm--', 'g-.', 'r:'), nrows=1, ncols=1,\n",
+    "                 figsize=(3.5, 2.5)):\n",
+    "        # 增量地绘制多条线\n",
+    "        if legend is None:\n",
+    "            legend = []\n",
+    "        use_svg_display()\n",
+    "        self.fig, self.axes = plt.subplots(nrows, ncols, figsize=figsize)\n",
+    "        if nrows * ncols == 1:\n",
+    "            self.axes = [self.axes, ]\n",
+    "        # 使用lambda函数捕获参数\n",
+    "        self.config_axes = lambda: set_axes(\n",
+    "            self.axes[0], xlabel, ylabel, xlim, ylim, xscale, yscale, legend)\n",
+    "        self.X, self.Y, self.fmts = None, None, fmts\n",
+    "\n",
+    "    def add(self, x, y):\n",
+    "        # 向图表中添加多个数据点\n",
+    "        if not hasattr(y, \"__len__\"):\n",
+    "            y = [y]\n",
+    "        n = len(y)\n",
+    "        if not hasattr(x, \"__len__\"):\n",
+    "            x = [x] * n\n",
+    "        if not self.X:\n",
+    "            self.X = [[] for _ in range(n)]\n",
+    "        if not self.Y:\n",
+    "            self.Y = [[] for _ in range(n)]\n",
+    "        for i, (a, b) in enumerate(zip(x, y)):\n",
+    "            if a is not None and b is not None:\n",
+    "                self.X[i].append(a)\n",
+    "                self.Y[i].append(b)\n",
+    "        self.axes[0].cla()\n",
+    "        for x, y, fmt in zip(self.X, self.Y, self.fmts):\n",
+    "            self.axes[0].plot(x, y, fmt)\n",
+    "        self.config_axes()\n",
+    "        display.display(self.fig)\n",
+    "        display.clear_output(wait=True)\n",
+    "\n",
+    "class Accumulator:  #@save\n",
+    "    \"\"\"在n个变量上累加\"\"\"\n",
+    "    def __init__(self, n):\n",
+    "        self.data = [0.0] * n\n",
+    "\n",
+    "    def add(self, *args):\n",
+    "        self.data = [a + float(b) for a, b in zip(self.data, args)]\n",
+    "\n",
+    "    def reset(self):\n",
+    "        self.data = [0.0] * len(self.data)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        return self.data[idx]\n",
+    "\n",
+    "def accuracy(y_hat, y):  #@save\n",
+    "    \"\"\"计算预测正确的数量\"\"\"\n",
+    "    if len(y_hat.shape) > 1 and y_hat.shape[1] > 1:\n",
+    "        y_hat = y_hat.argmax(axis=1)\n",
+    "    cmp = y_hat.type(y.dtype) == y\n",
+    "    return float(cmp.type(y.dtype).sum())\n",
+    "\n",
+    "def train_epoch_ch3(net, train_iter, loss, updater):  #@save\n",
+    "    \"\"\"训练模型一个迭代周期（定义见第3章）\"\"\"\n",
+    "    # 将模型设置为训练模式\n",
+    "    if isinstance(net, torch.nn.Module):\n",
+    "        net.train()\n",
+    "    # 训练损失总和、训练准确度总和、样本数\n",
+    "    metric = Accumulator(3)\n",
+    "    for X, y in train_iter:\n",
+    "        # 计算梯度并更新参数\n",
+    "        y_hat = net(X)\n",
+    "        l = loss(y_hat, y)\n",
+    "        if isinstance(updater, torch.optim.Optimizer):\n",
+    "            # 使用PyTorch内置的优化器和损失函数\n",
+    "            updater.zero_grad()\n",
+    "            l.mean().backward()\n",
+    "            updater.step()\n",
+    "        else:\n",
+    "            # 使用定制的优化器和损失函数\n",
+    "            l.sum().backward()\n",
+    "            updater(X.shape[0])\n",
+    "        metric.add(float(l.sum()), accuracy(y_hat, y), y.numel())\n",
+    "    # 返回训练损失和训练精度\n",
+    "    return metric[0] / metric[2], metric[1] / metric[2]\n",
+    "\n",
+    "def evaluate_accuracy(net, data_iter):  #@save\n",
+    "    \"\"\"计算在指定数据集上模型的精度\"\"\"\n",
+    "    if isinstance(net, torch.nn.Module):\n",
+    "        net.eval()  # 将模型设置为评估模式\n",
+    "    metric = Accumulator(2)  # 正确预测数、预测总数\n",
+    "    with torch.no_grad():\n",
+    "        for X, y in data_iter:\n",
+    "            metric.add(accuracy(net(X), y), y.numel())\n",
+    "    return metric[0] / metric[1]\n",
+    "\n",
+    "def train_ch3(net, train_iter, test_iter, loss, num_epochs, updater):  #@save\n",
+    "    \"\"\"训练模型（定义见第3章）\"\"\"\n",
+    "    animator = Animator(xlabel='epoch', xlim=[1, num_epochs], ylim=[0.3, 0.9],\n",
+    "                        legend=['train loss', 'train acc', 'test acc'])\n",
+    "    for epoch in range(num_epochs):\n",
+    "        train_metrics = train_epoch_ch3(net, train_iter, loss, updater)\n",
+    "        test_acc = evaluate_accuracy(net, test_iter)\n",
+    "        animator.add(epoch + 1, train_metrics + (test_acc,))\n",
+    "    train_loss, train_acc = train_metrics\n",
+    "    assert train_loss < 0.5, train_loss\n",
+    "    assert train_acc <= 1 and train_acc > 0.7, train_acc\n",
+    "    assert test_acc <= 1 and test_acc > 0.7, test_acc\n",
+    "\n",
+    "def get_fashion_mnist_labels(labels): #@save\n",
+    "    \"\"\"返回Fashion-MNIST数据集的文本标签\"\"\"\n",
+    "    text_labels = ['t-shirt', 'trouser', 'pullover', 'dress', 'coat',\n",
+    "    'sandal', 'shirt', 'sneaker', 'bag', 'ankle boot']\n",
+    "    return [text_labels[int(i)] for i in labels]\n",
+    "\n",
+    "def imshow(img):\n",
+    "    return plt.imshow(img)\n",
+    "\n",
+    "def show_images(imgs, num_rows, num_cols, titles=None, scale=1.5): #@save\n",
+    "    \"\"\"绘制图像列表\"\"\"\n",
+    "    figsize = (num_cols * scale, num_rows * scale)\n",
+    "    _, axes = plt.subplots(num_rows, num_cols, figsize=figsize)\n",
+    "    axes = axes.flatten()\n",
+    "    for i, (ax, img) in enumerate(zip(axes, imgs)):\n",
+    "        if torch.is_tensor(img):\n",
+    "            # 图片张量\n",
+    "            ax.imshow(img.numpy())\n",
+    "        else:\n",
+    "            # PIL图片\n",
+    "            ax.imshow(img)\n",
+    "            ax.axes.get_xaxis().set_visible(False)\n",
+    "            ax.axes.get_yaxis().set_visible(False)\n",
+    "            if titles:\n",
+    "                ax.set_title(titles[i])\n",
+    "    return axes\n",
+    "\n",
+    "def predict_ch3(net, test_iter, n=6):  #@save\n",
+    "    \"\"\"预测标签（定义见第3章）\"\"\"\n",
+    "    for X, y in test_iter:\n",
+    "        break\n",
+    "    trues = get_fashion_mnist_labels(y)\n",
+    "    preds = get_fashion_mnist_labels(net(X).argmax(axis=1))\n",
+    "    titles = [true +'\\n' + pred for true, pred in zip(trues, preds)]\n",
+    "    show_images(X[0:n].reshape((n, 28, 28)), 1, n, titles=titles[0:n])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3bc61e07",
+   "id": "02ab7dae",
    "metadata": {},
    "outputs": [],
    "source": []
